--- a/RH2/contact.html
+++ b/RH2/contact.html
@@ -89,7 +89,6 @@
     <section class="company_info join f_color_w align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
             <h2 class="main_title">加入全康</h2>
-            <!-- <h4 class="sub_title">Join us</h4> -->
             <p class="p20">感謝您參觀全康科技，希望您喜歡我們的資訊<br>若有任何疑問，歡迎您的指教與建議，或隨時與我們聯絡。</p>
         </div>
     </section>
@@ -111,7 +110,7 @@
                     <h3>醫材法規相關人員</h3>
                     <ul>
                         <li><p>熟悉醫療器材相關法規。</p></li>
-                        <li><p>熟悉國內外產品查驗登記申請、變更及展延相`關工作。 </p></li>
+                        <li><p>熟悉國內外產品查驗登記申請、變更及展延相關工作。 </p></li>
                         <li><p>對國內外之衛生主管機關及臨床委託研究公司之聯繫溝通。</p></li>
                         <li><p>悉知並更新國內外開發、查登、品質系統相關法規之訂定及修改。</p></li>
                     </ul>
@@ -125,7 +124,7 @@
             <p class="p_info">全康科技以專注於研發及業務行銷上，所以擁有自主開發及專利。</p>
             <ul>
                 <li>
-                    <p class="add">30288 新竹縣竹北市台元1街8號2樓之10</p>
+                    <p class="add"><a href="https://goo.gl/maps/czEwfKoABJv" target="_blank">30288 新竹縣竹北市台元1街8號2樓之10</a></p>
                 </li>
                 <li>
                     <p class="mail"><a href="mailto:dora_chen@richhealthtek.com" target="_blank">dora_chen@richhealthtek.com</a></p>
@@ -137,7 +136,8 @@
         </div>
     </section>
     <section class="google_map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.6456653378987!2d121.01606831500254!3d24.841788384062816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346836c459b26157%3A0x84dcb8e40f2b4526!2zMzAy5paw56u557ij56u55YyX5biC5Y-w5YWD5LiA6KGXOOiZnw!5e0!3m2!1szh-TW!2stw!4v1541567322299" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <a href="https://goo.gl/maps/czEwfKoABJv" target="_blank"></a>
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.6456653378987!2d121.01606831500254!3d24.841788384062816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346836c459b26157%3A0x84dcb8e40f2b4526!2zMzAy5paw56u557ij56u55YyX5biC5Y-w5YWD5LiA6KGXOOiZnw!5e0!3m2!1szh-TW!2stw!4v1541567322299" frameborder="0" style="border:0" allowfullscreen></iframe> -->
     </section>
 </main>
 
@@ -156,11 +156,11 @@
         </ul>
         <div class="copyrightBox clearfix">
             <p>Copyright © 2018 RichHealth</p>
-            <ul class="social_media">
+            <!-- <ul class="social_media">
                 <li><a class="twitter" href="#"></a></li>
                 <li><a class="facebook" href="#"></a></li>
                 <li><a class="youtube" href="#"></a></li>
-            </ul>
+            </ul> -->
         </div>
     </div>
 </footer>
