--- a/RH2/contact_en.html
+++ b/RH2/contact_en.html
@@ -59,7 +59,7 @@
     <div class="mobile-nav" id="sideMenu">
         <ul class="Oneself">
             <li><p><a href="index_en.html">About RichHealth</a></p></li>
-            <li><p><a href="product_en.html">Product</a></p></li>
+            <li><p><a href="product_en.html">Products</a></p></li>
             <li><p><a href="news_en.html">Latest News</a></p></li>
             <li><p><a href="contact_en.html">Join RichHealth</a></p></li>
             <li><p class="language"><a href="contact.html">繁體中文</a></p></li>
@@ -77,7 +77,7 @@
         <nav class="ContentsBox clearfix ">
             <ul class="main_menu">
                 <li><h3><a href="index_en.html">About RichHealth</a></h3></li>
-                <li><h3><a href="product_en.html">Product</a></h3></li>
+                <li><h3><a href="product_en.html">Products</a></h3></li>
                 <li><h3><a href="news_en.html">Latest News</a></h3></li>
                 <li class="btn_in"><h3><a href="contact_en.html">Join RichHealth</a></h3></li>
             </ul>
@@ -89,31 +89,30 @@
 <main class="main_contents">
     <section class="company_info join f_color_w align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
-            <h2 class="main_title">Join RichHealth and Empower Yourselves </h2>
-            <p class="p20">If you need more information or have any questions, please email us at...</p>
+            <h2 class="main_title">Join RichHealth and Empower Yourself </h2>
+            <p class="p20">Please contact us for further information.</p>
         </div>
     </section>
     <section class="company_info recruitBox">
         <div class="ContentsBox">
             <h2 class="main_title">Jobs</h2>
-            <p class="p_info"><span class="blue_line">菁英招募歡迎充滿熱誠，才華洋溢的你/妳，一同加入全康科技</span></p>
             <div class="recruit_list clearfix">
                 <div class="both" data-scroll-reveal="enter left">
-                    <h3>R & D personnel:</h3>
+                    <h3>R & D Personnel:</h3>
                     <ul>
-                        <li><p>Medical device research and development personnel.</p></li>
-                        <li><p>Background in polymer materials.</p></li>
-                        <li><p>Experience in the field of electrochemistry/sensors.</p></li>
-                        <li><p>Familiar with the design and development process of medical device.</p></li>
+                        <li><p>Medical device research and development personnel</p></li>
+                        <li><p>Knowledgeable in polymer materials</p></li>
+                        <li><p>Experienced in the field of electrochemistry/sensors</p></li>
+                        <li><p>Familiar with the design and development process of medical devices</p></li>
                     </ul>
                 </div>
                 <div class="both" data-scroll-reveal="enter left and move 50px over 2s">
-                    <h3>Medical Material Regulations Personnel</h3>
+                    <h3>Medical Material Regulation Personnel</h3>
                     <ul>
-                        <li><p>Experienced in medical equipment regulations.</p></li>
-                        <li><p>Experienced in registration application for domestic and international product inspection, product change, and product extension.</p></li>
-                        <li><p>Communicate with domestic and international health authorities and clinically commissioned research companies.</p></li>
-                        <li><p>Acknowledge and update the latest developments, registration, quality system of domestic and international medical regulations.</p></li>
+                        <li><p>Experienced in medical device regulations</p></li>
+                        <li><p>Experienced in registration application for domestic and international product inspection, product change, and product extension</p></li>
+                        <li><p>Communicate with domestic and foreign health authorities and commissioned clinical research companies</p></li>
+                        <li><p>Follow up the new formulations and revisions of the domestic or international regulations regarding medical developments, certifications and quality systems</p></li>
                     </ul>
                 </div>
             </div>
@@ -121,11 +120,10 @@
     </section>
     <section class="company_info contact_us bg_gray">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
-            <h2 class="main_title">Contact us</h2>
-            <p class="p_info">全康科技以專注於研發及業務行銷上，所以擁有自主開發及專利。</p>
+            <h2 class="main_title">Contact Us</h2>
             <ul>
                 <li>
-                    <p class="add">Rm. 10, 2F.-0, No.8, Taiyuan 1st St., Zhubei City, Hsinchu County 302, Taiwan (R.O.C.)</p>
+                    <p class="add"><a href="https://goo.gl/maps/czEwfKoABJv" target="_blank">2nd F-10, No.8, Taiyuan 1st St., Zhubei City, Hsinchu County 30288, Taiwan (R.O.C.)</a></p>
                 </li>
                 <li>
                     <p class="mail"><a href="mailto:dora_chen@richhealthtek.com" target="_blank">dora_chen@richhealthtek.com</a></p>
@@ -136,31 +134,31 @@
             </ul>
         </div>
     </section>
-    <section class="google_map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7241.291353147189!2d121.018257!3d24.841788!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346836c459b26157%3A0x84dcb8e40f2b4526!2sNo.+8%E8%99%9F%2C+Taiyuan+1st+Street%2C+Zhubei+City%2C+Hsinchu+County%2C+302!5e0!3m2!1sen!2stw!4v1541568507951&language=en" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <section class="google_map map_en">
+        <a href="https://goo.gl/maps/czEwfKoABJv" target="_blank"></a>
     </section>
 </main>
 
 <footer class="FooterBox">
     <div class="ContentsBox clearfix">
         <ul class="info">
-            <li><p class="add">Rm. 10, 2F.-0, No.8, Taiyuan 1st St., Zhubei City, Hsinchu County 302, Taiwan (R.O.C.)</p></li>
+            <li><p class="add">2nd F-10, No.8, Taiyuan 1st St., Zhubei City, Hsinchu County 30288, Taiwan (R.O.C.)</p></li>
             <li><p class="mail"><a href="mailto:dora_chen@richhealthtek.com">dora_chen@richhealthtek.com</a></p></li>
            <li><p class="phone">+886 3 5601122</p></li>
         </ul>
         <ul class="sub_menu for_en">
             <li><p><a href="index_en.html">About RichHealth</a></p></li>
-            <li><p><a href="product_en.html">Product</a></p></li>
+            <li><p><a href="product_en.html">Products</a></p></li>
             <li><p><a href="news_en.html">Latest News</a></p></li>
             <li><p><a href="contact_en.html">Join RichHealth</a></p></li>
         </ul>
         <div class="copyrightBox clearfix">
             <p>Copyright © 2018 RichHealth</p>
-            <ul class="social_media">
+            <!-- <ul class="social_media">
                 <li><a class="twitter" href="#"></a></li>
                 <li><a class="facebook" href="#"></a></li>
                 <li><a class="youtube" href="#"></a></li>
-            </ul>
+            </ul> -->
         </div>
     </div>
 </footer>
