--- a/RH2/index.html
+++ b/RH2/index.html
@@ -96,7 +96,7 @@
                 </li>
                 <li style="background-image:url(images/banner/main_01.png);">
                     <div class="ContentsBox animated slideInDown" data-animation="slideInDown" data-slideshowspeed="5000">
-                        <h3 class="banner_title">創新、誠信、合作<br>提供全方位的生理檢測資訊</h3>
+                        <h3 class="banner_title">專業, 堅持<br>提供客戶一流的品質與服務</h3>
                     </div>
                 </li>
                 <li style="background-image:url(images/banner/main_02.png);">
@@ -115,9 +115,8 @@
     <section class="company_info "><!-- w_triangle -->
         <div class="ContentsBox">
             <h2 class="main_title">公司簡介</h2>
-            <h4 class="sub_title">Company Profile</h4>
             <p class="p_info"><span class="blue_line">全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。</span><Br></p>
-                <p class="h24">2016年Q3合倂微凸科技公司，整合其微針量產技術，投入可拋棄式微創連續血糖監測（CGMS）相關應用產品開發，為一家專注於可拋棄型醫療電子系統的完整方案設計公司。<br>
+                <p class="h24">2016年Q3合倂微凸科技公司，整合其微針技術, 全康開發出量產方法，投入可拋棄式微創連續血糖監測（CGMS）相關應用產品開發，為一家專注於可拋棄型醫療電子系統的完整方案設計公司。<br>
                 <br>
                 第一代無線微型可拋棄溫度貼已上市，並搭配智慧型手機APP互動式軟體，建立全方位無間斷的醫學預警聯網系統。<br>
                 <br>公司目前重點投入研發製造高技術、高附加價值及高市場成長的血糖連續監測系統醫療器材產品開發，讓使用者可輕易監測生理代謝變化的訊號並回饋訊息。同時，亦將量測之結果進行大數據之分析，目標建立數位醫療及雲端服務的健康照護平台，協助使用者更輕易的自我管理血糖，並減輕負擔。</p>
@@ -126,7 +125,6 @@
     <section class="company_info purpose f_color_w">
         <div class="ContentsBox">
             <h2 class="main_title">公司願景</h2>
-            <h4 class="sub_title">Company Vision</h4>
             <p class="p_info">全康科技自成立以來，秉持創新突破、誠信守諾及協同合作的企業文化，真誠面對與回應客戶的需求。並竭誠依循全康科技「創新、誠信、合作」之核心價值觀及具有國際化的眼光將產品拓展全球市場。在策略上亦做長遠的規劃和安排，以達永續經營的目標。</p>
             <ul class="vision clearfix">
                 <li data-scroll-reveal="enter top and move 50px over 1s">
@@ -147,7 +145,6 @@
     <section class="company_info">
         <div class="ContentsBox">
             <h2 class="main_title">公司組織架構</h2>
-            <h4 class="sub_title">Organization Structure</h4>
             <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_home_organizational.png" alt="公司組織架構" width="100%"></div>
         </div>
     </section>
@@ -168,11 +165,11 @@
         </ul>
         <div class="copyrightBox clearfix">
             <p>Copyright © 2018 RichHealth</p>
-            <ul class="social_media">
+            <!-- <ul class="social_media">
                 <li><a class="twitter" href="#"></a></li>
                 <li><a class="facebook" href="#"></a></li>
                 <li><a class="youtube" href="#"></a></li>
-            </ul>
+            </ul> -->
         </div>
     </div>
 </footer>
