--- a/RH2/index_en.html
+++ b/RH2/index_en.html
@@ -59,7 +59,7 @@
     <div class="mobile-nav" id="sideMenu">
         <ul class="Oneself">
             <li><p><a href="index_en.html">About RichHealth</a></p></li>
-            <li><p><a href="product_en.html">Product</a></p></li>
+            <li><p><a href="product_en.html">Products</a></p></li>
             <li><p><a href="news_en.html">Latest News</a></p></li>
             <li><p><a href="contact_en.html">Join RichHealth</a></p></li>
             <li><p class="language"><a href="news.html">繁體中文</a></p></li>
@@ -77,7 +77,7 @@
         <nav class="ContentsBox clearfix ">
             <ul class="main_menu">
                 <li class="btn_in"><h3><a href="index_en.html">About RichHealth</a></h3></li>
-                <li><h3><a href="product_en.html">Product</a></h3></li>
+                <li><h3><a href="product_en.html">Products</a></h3></li>
                 <li><h3><a href="news_en.html">Latest News</a></h3></li>
                 <li><h3><a href="contact_en.html">Join RichHealth</a></h3></li>
             </ul>
@@ -92,22 +92,22 @@
             <ul class="slides">
                 <li style="background-image:url(images/banner/main_01-1.png);">
                     <div class="ContentsBox animated slideInDown" data-animation="slideInDown" data-slideshowspeed="5000">
-                        <h3 class="banner_title">創新、誠信、合作<br>提供全方位的生理檢測資訊</h3>
+                        <h3 class="banner_title">Innovation, Integrity, Collaboration<br>Provide comprehensive physiological measurement information.</h3>
                     </div>
                 </li>
                 <li style="background-image:url(images/banner/main_01.png);">
                     <div class="ContentsBox animated slideInDown" data-animation="slideInDown" data-slideshowspeed="5000">
-                        <h3 class="banner_title">創新、誠信、合作<br>提供全方位的生理檢測資訊</h3>
+                        <h3 class="banner_title">Expertise, Persistence<br>Excellence for our clients</h3>
                     </div>
                 </li>
                 <li style="background-image:url(images/banner/main_02.png);">
                     <div class="ContentsBox">
-                        <h3 class="banner_title">全康科技<br>用心呵護您的每一天</h3>
+                        <h3 class="banner_title">We care every moment of your daily life.</h3>
                     </div>
                 </li>
                 <li style="background-image:url(images/banner/main_03.png);">
                     <div class="ContentsBox">
-                        <h3 class="banner_title">全康科技<br>創新、用心，只為您</h3>
+                        <h3 class="banner_title">We devoted in innovation just for you.</h3>
                     </div>
                 </li>
             </ul>
@@ -115,41 +115,39 @@
     </section>
     <section class="company_info "><!-- w_triangle -->
         <div class="ContentsBox">
-            <h2 class="main_title">公司簡介</h2>
-            <h4 class="sub_title">Company Profile</h4>
-            <p class="p_info"><span class="blue_line">全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。</span><Br></p>
-                <p class="h24">2016年Q3合倂微凸科技公司，整合其微針量產技術，投入可拋棄式微創連續血糖監測（CGMS）相關應用產品開發，為一家專注於可拋棄型醫療電子系統的完整方案設計公司。<br>
+            <h2 class="main_title">Company Profile</h2>
+            <p class="p_info"><span class="blue_line">Founded in April, 2016, with passion and vision, RichHealth integrates biomedicine, high-end electronic component design, global marketing experts and dedicates in developing high-end medical device products.</span><Br></p>
+                <p class="h24">RichHealth merged Micro Nipple Technology in the 3rd quarter of 2016. Integrating its micro-needle technology, RichHealth keeps developing the method of mass production and disposable minimally invasive continuous glucose monitoring (CGM) products and specializes in a total solution for disposable medical electronic system.<br>
                 <br>
-                第一代無線微型可拋棄溫度貼已上市，並搭配智慧型手機APP互動式軟體，建立全方位無間斷的醫學預警聯網系統。<br>
-                <br>公司目前重點投入研發製造高技術、高附加價值及高市場成長的血糖連續監測系統醫療器材產品開發，讓使用者可輕易監測生理代謝變化的訊號並回饋訊息。同時，亦將量測之結果進行大數據之分析，目標建立數位醫療及雲端服務的健康照護平台，協助使用者更輕易的自我管理血糖，並減輕負擔。</p>
+                The first generation of wireless disposable temperature patch has been launched into the market. With interactive mobile APP, RichHealth has built an all-round uninterrupted proactive medical warning networking system.<br>
+                <br>The company is currently focusing on the development of high-tech, high value-added and high-market growth of continuous glucose monitoring system medical equipment product development. This product allows users to easily monitor physiological metabolic changes and feedback messages. Meanwhile, the results of the measurement will be analyzed by big data. The goal is to establish a health care platform for digital medical and cloud services to help users manage their blood sugar more easily.</p>
         </div>
     </section>
     <section class="company_info purpose f_color_w">
         <div class="ContentsBox">
-            <h2 class="main_title">公司願景</h2>
-            <h4 class="sub_title">Company Vision</h4>
-            <p class="p_info">全康科技自成立以來，秉持創新突破、誠信守諾及協同合作的企業文化，真誠面對與回應客戶的需求。並竭誠依循全康科技「創新、誠信、合作」之核心價值觀及具有國際化的眼光將產品拓展全球市場。在策略上亦做長遠的規劃和安排，以達永續經營的目標。</p>
+            <h2 class="main_title">Company Vision</h2>
+            <p class="p_info">Since its establishment, RichHealth has been adhering to the corporate culture of innovation breakthrough, integrity and collaboration, and sincerely faces and fulfills customer’s needs. RichHealth will continue to uphold the company core values of “Innovation, Integrity and Collaboration” and international vision to develop global market and sustain the business with long-term planning and strategy</p>
             <ul class="vision clearfix">
                 <li data-scroll-reveal="enter top and move 50px over 1s">
-                    <h4 class="icon_01">品質政策</h4>
-                    <p class="p_info">全康科技的品質政策是「品質第一、技術創新、客戶滿意」，致力於提供卓越的產品和服務給全球客戶，並在產品上亦精益求精、不斷創新。</p>
+                    <h4 class="icon_01">Quality Philosophy</h4>
+                    <p class="p_info">Quality First, Technical Innovations, Customer Satisfaction” has been RichHealth’s philosophy on quality and we are committed to providing excellence and innovation in our products for our customers all over the world.</p>
                 </li>
                 <li data-scroll-reveal="enter top and move 50px over 3s">
-                    <h4 class="icon_02">經營政策</h4>
-                    <p class="p_info">全康科技提供高度整合之拋棄型醫療電子系統的完整解決方案，協助客戶建立良好產品及技術平台，提供一個值得信賴的數位醫療服務。</p>
+                    <h4 class="icon_02">Business Philosophy</h4>
+                    <p class="p_info">RichHealth provides a total solution for highly integrated disposable medical electronic system to help our clients to have well-built products and technology platforms as well as reliable digital medical services.</p>
                 </li>
                  <li data-scroll-reveal="enter top and move 50px over 5s">
-                    <h4 class="icon_03">管理模式</h4>
-                    <p class="p_info">公司內部建立一個良好的溝通環境讓員工之間能誠信相待、理性思考並廣泛接受不同的意見。另一方面，建立開放式的溝通管道使同仁集思廣益、建立共識、方向一致而達成目標。同時，亦安排員工相關的教育訓練課程及多元的學習發展，結合志同道合的優秀人才，迎向更具挑戰性的未來。</p>
+                    <h4 class="icon_03">Management Philosophy</h4>
+                    <p class="p_info">An open-minded to communicate, a mutual respect attitude, a rational thinking, a shared consensus to strive the same goal have been RichHealth’s culture. On-going and diverse trainings are provided to enhance our staffs’ interpersonal skills and technical know-hows which will benefit both the growth of the company and the staffs. We welcome like-minded people to join us to create a fulfilling future.</p>
                 </li>
             </ul>
         </div>
     </section>
     <section class="company_info">
         <div class="ContentsBox">
-            <h2 class="main_title">公司組織架構</h2>
-            <h4 class="sub_title">Organization Structure</h4>
-            <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_home_organizational.png" alt="公司組織架構" width="100%"></div>
+            <h2 class="main_title">Organization Structure</h2>
+            <h4 class="sub_title"></h4>
+            <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_home_organizational_en.png" alt="Organization Structure" width="100%"></div>
         </div>
     </section>
 </main>
@@ -157,23 +155,23 @@
 <footer class="FooterBox">
     <div class="ContentsBox clearfix">
         <ul class="info">
-            <li><p class="add">Rm. 10, 2F.-0, No.8, Taiyuan 1st St., Zhubei City, Hsinchu County 302, Taiwan (R.O.C.)</p></li>
+            <li><p class="add">2nd F-10, No.8, Taiyuan 1st St., Zhubei City, Hsinchu County 30288, Taiwan (R.O.C.)</p></li>
             <li><p class="mail"><a href="mailto:dora_chen@richhealthtek.com">dora_chen@richhealthtek.com</a></p></li>
             <li><p class="phone">+886 3 5601122</p></li>
         </ul>
         <ul class="sub_menu for_en">
             <li><p><a href="index_en.html">About RichHealth</a></p></li>
-            <li><p><a href="product_en.html">Product</a></p></li>
+            <li><p><a href="product_en.html">Products</a></p></li>
             <li><p><a href="news_en.html">Latest News</a></p></li>
             <li><p><a href="contact_en.html">Join RichHealth</a></p></li>
         </ul>
         <div class="copyrightBox clearfix">
             <p>Copyright © 2018 RichHealth</p>
-            <ul class="social_media">
+            <!-- <ul class="social_media">
                 <li><a class="twitter" href="#"></a></li>
                 <li><a class="facebook" href="#"></a></li>
                 <li><a class="youtube" href="#"></a></li>
-            </ul>
+            </ul> -->
         </div>
     </div>
 </footer>
