--- a/RH2/news_en.html
+++ b/RH2/news_en.html
@@ -59,7 +59,7 @@
     <div class="mobile-nav" id="sideMenu">
         <ul class="Oneself">
             <li><p><a href="index_en.html">About RichHealth</a></p></li>
-            <li><p><a href="product_en.html">Product</a></p></li>
+            <li><p><a href="product_en.html">Products</a></p></li>
             <li><p><a href="news_en.html">Latest News</a></p></li>
             <li><p><a href="contact_en.html">Join RichHealth</a></p></li>
             <li><p class="language"><a href="news.html">繁體中文</a></p></li>
@@ -77,7 +77,7 @@
         <nav class="ContentsBox clearfix ">
             <ul class="main_menu">
                 <li><h3><a href="index_en.html">About RichHealth</a></h3></li>
-                <li><h3><a href="product_en.html">Product</a></h3></li>
+                <li><h3><a href="product_en.html">Products</a></h3></li>
                 <li class="btn_in"><h3><a href="news_en.html">Latest News</a></h3></li>
                 <li><h3><a href="contact_en.html">Join RichHealth</a></h3></li>
             </ul>
@@ -89,19 +89,18 @@
 <main class="main_contents">
     <section class="company_info purpose news f_color_w align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
-            <h2 class="main_title">公司重要消息</h2>
-            <!-- <h4 class="sub_title">News</h4> -->
-            <p class="p20">全康科技，持續創新，掌握產業界相關技術及市場資訊，綜觀世界脈動!</p>
+            <h2 class="main_title">What's New</h2>
+            <p class="p20">RichHealth is keen on the new developments in healthcare industry.</p>
         </div>
     </section>
     <section class="company_info newsBox">
         <div class="ContentsBox">
-            <h2 class="new_main_title">全康相關訊息</h2>
+            <h2 class="new_main_title">Messages From RichHealth</h2>
             <ul>
                 <li class="clearfix">
                     <p class="day">2018-7</p>
                     <div class="new_info">
-                        <p>全康科技的創新CGMS產品技術於2017與2018年連續獲得『中華民國經濟部工業局個別企業專利檢索加值服務計畫』補助，此創新技術獲得市場高度關注及評審委員高度肯定。</p>
+                        <p> In 2017 and 2018, RichHealth's innovative CGMS product technology was consecutively awarded by the “Industrial Enterprise Patent Search and Value-added Service Plan of the Industrial Bureau of the Ministry of Economic Affairs of the Republic of China”. This innovative technology has received high praise from the judges and industry.</p>
                         <div class="photo">
                             <img src="images/news_photo.png" width="100%">
                         </div>
@@ -112,7 +111,7 @@
     </section>
     <section class="company_info newsBox bg_gray">
         <div class="ContentsBox">
-            <h2 class="new_main_title">醫療相關訊息</h2>
+            <h2 class="new_main_title">News from Healthcare Industry</h2>
             <ul class="gray_line">
                 <li class="clearfix">
                     <p class="day">2018-11</p>
@@ -129,7 +128,7 @@
                 <li class="clearfix">
                     <p class="day">2018-11</p>
                     <div class="new_info">
-                        <p><a href="https://www.fda.gov/NewsEvents/Newsroom/PressAnnouncements/ucm611475.html" target="_blank">FDA approves automated insulin delivery and monitoring system for use in younger pediatric patients</a></p>
+                        <p><a href="https://www.fda.gov/NewsEvents/Newsroom/PressAnnouncements/ucm611475.htm" target="_blank">FDA approves automated insulin delivery and monitoring system for use in younger pediatric patients</a></p>
                     </div>
                 </li>
             </ul>
@@ -140,23 +139,23 @@
 <footer class="FooterBox">
     <div class="ContentsBox clearfix">
         <ul class="info">
-            <li><p class="add">Rm. 10, 2F.-0, No.8, Taiyuan 1st St., Zhubei City, Hsinchu County 302, Taiwan (R.O.C.)</p></li>
+            <li><p class="add">2nd F-10, No.8, Taiyuan 1st St., Zhubei City, Hsinchu County 30288, Taiwan (R.O.C.)</p></li>
             <li><p class="mail"><a href="mailto:dora_chen@richhealthtek.com">dora_chen@richhealthtek.com</a></p></li>
             <li><p class="phone">+886 3 5601122</p></li>
         </ul>
         <ul class="sub_menu for_en">
             <li><p><a href="index_en.html">About RichHealth</a></p></li>
-            <li><p><a href="product_en.html">Product</a></p></li>
+            <li><p><a href="product_en.html">Products</a></p></li>
             <li><p><a href="news_en.html">Latest News</a></p></li>
             <li><p><a href="contact_en.html">Join RichHealth</a></p></li>
         </ul>
         <div class="copyrightBox clearfix">
             <p>Copyright © 2018 RichHealth</p>
-            <ul class="social_media">
+            <!-- <ul class="social_media">
                 <li><a class="twitter" href="#"></a></li>
                 <li><a class="facebook" href="#"></a></li>
                 <li><a class="youtube" href="#"></a></li>
-            </ul>
+            </ul> -->
         </div>
     </div>
 </footer>
