--- a/RH2/product.html
+++ b/RH2/product.html
@@ -89,29 +89,25 @@
     <section class="company_info purpose product f_color_blue align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
             <h2 class="main_title">產品介紹</h2>
-            <!-- <h4 class="sub_title">Product description</h4> -->
             <p class="p20">我們提供全方位的生理檢測系統，讓您隨時掌握自我的健康狀況。</p>
         </div>
     </section>
     <section class="company_info "><!-- w_triangle -->
         <div class="ContentsBox">
             <h2 class="main_title">技術特點</h2>
-            <h4 class="sub_title">Technical characteristics</h4>
-            <p class="p_info"><span class="blue_line">全康科技整合多元生醫領域、高端電子元件設計、軟體設計專家、醫材法規人才及與全球行銷專才，投入高端醫療器材產品開發。以血糖量測技術領域為基礎，目標建立全方位生理檢測技術平台。</span><br></p>
-            <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_product_technology.png" alt="技術特點" width="100%"></div>
+            <p class="p_info"><span class="blue_line">全康科技整合多元生醫領域、高端電子元件設計、軟體設計專家、醫材法規人才及與全球行銷專才，投入高端醫療器材產品開發。以連續血糖監測技術領域為基礎，目標建立全方位生理檢測技術平台。</span><br></p>
+            <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_product_technology.jpg" alt="技術特點" width="100%"></div>
         </div>
     </section>
     <section class="company_info service f_color_w align_flex">
         <div class="ContentsBox bg-k" data-scroll-reveal="enter top">
             <h2 class="main_title">客戶服務</h2>
-            <h4 class="sub_title">Customer service</h4>
             <p class="p20">全康科技除了以自有品牌進行產品開發、認證及銷售外，亦提供專業的ODM/OEM服務，依據客戶的市場需求，提供客戶全方位的醫療電子系統的完整解決方案。</p>
         </div>
     </section>
     <section class="company_info patent f_color_w align_flex">
         <div class="ContentsBox bg-k" data-scroll-reveal="enter left">
             <h2 class="main_title">專利組合</h2>
-            <h4 class="sub_title">Patent portfolio</h4>
             <p class="p20">我們技術已獲得美國、台灣、歐洲等多國專利，可實際應用於血糖及多項生理訊號連續監測等領域。</p>
         </div>
     </section>
@@ -155,11 +151,11 @@
         </ul>
         <div class="copyrightBox clearfix">
             <p>Copyright © 2018 RichHealth</p>
-            <ul class="social_media">
+            <!-- <ul class="social_media">
                 <li><a class="twitter" href="#"></a></li>
                 <li><a class="facebook" href="#"></a></li>
                 <li><a class="youtube" href="#"></a></li>
-            </ul>
+            </ul> -->
         </div>
     </div>
 </footer>
