--- a/RH2/product_en.html
+++ b/RH2/product_en.html
@@ -59,7 +59,7 @@
     <div class="mobile-nav" id="sideMenu">
         <ul class="Oneself">
             <li><p><a href="index_en.html">About RichHealth</a></p></li>
-            <li><p><a href="product_en.html">Product</a></p></li>
+            <li><p><a href="product_en.html">Products</a></p></li>
             <li><p><a href="news_en.html">Latest News</a></p></li>
             <li><p><a href="contact_en.html">Join RichHealth</a></p></li>
             <li><p class="language"><a href="news.html">繁體中文</a></p></li>
@@ -77,7 +77,7 @@
         <nav class="ContentsBox clearfix ">
             <ul class="main_menu">
                 <li><h3><a href="index_en.html">About RichHealth</a></h3></li>
-                <li class="btn_in"><h3><a href="product_en.html">Product</a></h3></li>
+                <li class="btn_in"><h3><a href="product_en.html">Products</a></h3></li>
                 <li><h3><a href="news_en.html">Latest News</a></h3></li>
                 <li><h3><a href="contact_en.html">Join RichHealth</a></h3></li>
             </ul>
@@ -89,30 +89,27 @@
 <main class="main_contents">
     <section class="company_info purpose product f_color_blue align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
-            <h2 class="main_title">Product</h2>
-            <p class="p20">We offer a comprehensive range of physiological testing systems to keep you aware of your health status. </p>
+            <h2 class="main_title">Continuously Innovates</h2>
+            <p class="p20">We offer a comprehensive range of physiological monitoring systems to keep you aware of your health status.</p>
         </div>
     </section>
     <section class="company_info "><!-- w_triangle -->
         <div class="ContentsBox">
-            <h2 class="main_title">技術特點</h2>
-            <h4 class="sub_title">Technical characteristics</h4>
-            <p class="p_info"><span class="blue_line">全康科技整合多元生醫領域、高端電子元件設計、軟體設計專家、醫材法規人才及與全球行銷專才，投入高端醫療器材產品開發。以血糖量測技術領域為基礎，目標建立全方位生理檢測技術平台。</span><br></p>
-            <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_product_technology.png" alt="技術特點" width="100%"></div>
+            <h2 class="main_title">Technology Highlights</h2>
+            <p class="p_info"><span class="blue_line">RichHealth integrates diverse fields of biomedical science, high-end electronic component design, software design, medical regulation professionals and global marketing experts and dedicates in developing high-end medical device products.   Starting from the continuous glucose measurement technology, RichHealth’s ultimate goal has been establishing a comprehensive platform technology for physiological measurements.</span><br></p>
+            <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_product_technology_en.jpg" alt="Technical characteristics" width="100%"></div>
         </div>
     </section>
     <section class="company_info service f_color_w align_flex">
         <div class="ContentsBox bg-k" data-scroll-reveal="enter top">
-            <h2 class="main_title">客戶服務</h2>
-            <h4 class="sub_title">Customer service</h4>
-            <p class="p20">全康科技除了以自有品牌進行產品開發、認證及銷售外，亦提供專業的ODM/OEM服務，依據客戶的市場需求，提供客戶全方位的醫療電子系統的完整解決方案。</p>
+            <h2 class="main_title">Customer Service</h2>
+            <p class="p20">In addition to product development, certification, sales and marketing under our own brand, RichHealth also provides professional ODM/OEM services. We provide total solutions for a comprehensive medical electronic system for our clients according to their market demands.</p>
         </div>
     </section>
     <section class="company_info patent f_color_w align_flex">
         <div class="ContentsBox bg-k" data-scroll-reveal="enter left">
-            <h2 class="main_title">專利組合</h2>
-            <h4 class="sub_title">Patent portfolio</h4>
-            <p class="p20">我們技術已獲得美國、台灣、歐洲等多國專利，可實際應用於血糖及多項生理訊號連續監測等領域。</p>
+            <h2 class="main_title">Patent Portfolio</h2>
+            <p class="p20">Our continuous physiological information (such as blood glucose) monitoring technologies have obtained multiple patents from various countries or areas in the world, such as United States, Europe, Taiwan, and China.</p>
         </div>
     </section>
     <section class="company_info product_list">
@@ -143,23 +140,23 @@
 <footer class="FooterBox">
     <div class="ContentsBox clearfix">
         <ul class="info">
-            <li><p class="add">Rm. 10, 2F.-0, No.8, Taiyuan 1st St., Zhubei City, Hsinchu County 302, Taiwan (R.O.C.)</p></li>
+            <li><p class="add">2nd F-10, No.8, Taiyuan 1st St., Zhubei City, Hsinchu County 30288, Taiwan (R.O.C.)</p></li>
             <li><p class="mail"><a href="mailto:dora_chen@richhealthtek.com">dora_chen@richhealthtek.com</a></p></li>
             <li><p class="phone">+886 3 5601122</p></li>
         </ul>
         <ul class="sub_menu for_en">
             <li><p><a href="index_en.html">About RichHealth</a></p></li>
-            <li><p><a href="product_en.html">Product</a></p></li>
+            <li><p><a href="product_en.html">Products</a></p></li>
             <li><p><a href="news_en.html">Latest News</a></p></li>
             <li><p><a href="contact_en.html">Join RichHealth</a></p></li>
         </ul>
         <div class="copyrightBox clearfix">
             <p>Copyright © 2018 RichHealth</p>
-            <ul class="social_media">
+            <!-- <ul class="social_media">
                 <li><a class="twitter" href="#"></a></li>
                 <li><a class="facebook" href="#"></a></li>
                 <li><a class="youtube" href="#"></a></li>
-            </ul>
+            </ul> -->
         </div>
     </div>
 </footer>
