--- a/RH2/index_en.html
+++ b/RH2/index_en.html
@@ -8,25 +8,25 @@
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:image" content="http://www.richhealthtek.com/images/share_pic.jpg"/>
+<meta property="og:image" content="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/share_pic.jpg"/>
 <meta property="og:title" content="RealHealth Technology Corporation"/>
-<meta property="og:url" content="http://www.richhealthtek.com/"/>
+<meta property="og:url" content="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/index.html"/>
 <meta property="og:description" content="RichHealth was founded in April 2016 and is focusing on disposable medical electronics. In Q3, 2016, the company merged with Micro Needle Technology Co., Ltd. (TW) to co-develop painless CGMS related products."/>
 <meta property="og:type" content="website"/>
 
 <!-- Share image -->
-<link rel="image_src" href="http://www.richhealthtek.com/images/share_pic.jpg">
+<link rel="image_src" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/share_pic.jpg">
 <!--Icon image  -->
-<link rel="shortcut icon" href="http://www.richhealthtek.com/images/favicon.ico" />
-<link rel="apple-touch-icon" href="http://www.richhealthtek.com/images/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="152x152" href="http://www.richhealthtek.com/images/pple-touch-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="167x167" href="http://www.richhealthtek.com/images/apple-touch-icon-167x167.png">
-<link rel="apple-touch-icon" sizes="180x180" href="http://www.richhealthtek.com/images/apple-touch-icon-180x180.png">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_16x16.png" sizes="16x16">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_128x128.png" sizes="128x128">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_192x192.png" sizes="192x192">
+<link rel="shortcut icon" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon.ico" />
+<link rel="apple-touch-icon" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="152x152" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/pple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="167x167" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon-167x167.png">
+<link rel="apple-touch-icon" sizes="180x180" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_128x128.png" sizes="128x128">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_192x192.png" sizes="192x192">
 
 
 <link rel="stylesheet" href="css/style.css">
@@ -130,15 +130,15 @@
             <ul class="vision clearfix">
                 <li data-scroll-reveal="enter top and move 50px over 1s">
                     <h4 class="icon_01">Quality Philosophy</h4>
-                    <p class="p_info">Quality First, Technical Innovations, Customer Satisfaction” has been RichHealth’s philosophy on quality and we are committed to providing excellence and innovation in our products for our customers all over the world.</p>
+                    <p class="p_info p_en">Quality First, Technical Innovations, Customer Satisfaction” has been RichHealth’s philosophy on quality and we are committed to providing excellence and innovation in our products for our customers all over the world.</p>
                 </li>
                 <li data-scroll-reveal="enter top and move 50px over 3s">
                     <h4 class="icon_02">Business Philosophy</h4>
-                    <p class="p_info">RichHealth provides a total solution for highly integrated disposable medical electronic system to help our clients to have well-built products and technology platforms as well as reliable digital medical services.</p>
+                    <p class="p_info p_en">RichHealth provides a total solution for highly integrated disposable medical electronic system to help our clients to have well-built products and technology platforms as well as reliable digital medical services.</p>
                 </li>
                  <li data-scroll-reveal="enter top and move 50px over 5s">
                     <h4 class="icon_03">Management Philosophy</h4>
-                    <p class="p_info">An open-minded to communicate, a mutual respect attitude, a rational thinking, a shared consensus to strive the same goal have been RichHealth’s culture. On-going and diverse trainings are provided to enhance our staffs’ interpersonal skills and technical know-hows which will benefit both the growth of the company and the staffs. We welcome like-minded people to join us to create a fulfilling future.</p>
+                    <p class="p_info p_en">An open-minded to communicate, a mutual respect attitude, a rational thinking, a shared consensus to strive the same goal have been RichHealth’s culture. On-going and diverse trainings are provided to enhance our staffs’ interpersonal skills and technical know-hows which will benefit both the growth of the company and the staffs. We welcome like-minded people to join us to create a fulfilling future.</p>
                 </li>
             </ul>
         </div>
