--- a/RH2/news.html
+++ b/RH2/news.html
@@ -8,25 +8,25 @@
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:image" content="images/share_pic.jpg"/>
+<meta property="og:image" content="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/share_pic.jpg"/>
 <meta property="og:title" content="RichHealth 全康科技"/>
-<meta property="og:url" content="#"/>
+<meta property="og:url" content="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/index.html"/>
 <meta property="og:description" content="全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。"/>
 <meta property="og:type" content="website"/>
 
 <!-- Share image -->
-<link rel="image_src" href="images/share_pic.jpg">
+<link rel="image_src" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/share_pic.jpg">
 <!--Icon image  -->
-<link rel="shortcut icon" href="http://www.richhealthtek.com/images/favicon.ico" />
-<link rel="apple-touch-icon" href="http://www.richhealthtek.com/images/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="152x152" href="http://www.richhealthtek.com/images/pple-touch-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="167x167" href="http://www.richhealthtek.com/images/apple-touch-icon-167x167.png">
-<link rel="apple-touch-icon" sizes="180x180" href="http://www.richhealthtek.com/images/apple-touch-icon-180x180.png">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_16x16.png" sizes="16x16">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_128x128.png" sizes="128x128">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_192x192.png" sizes="192x192">
+<link rel="shortcut icon" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon.ico" />
+<link rel="apple-touch-icon" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="152x152" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/pple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="167x167" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon-167x167.png">
+<link rel="apple-touch-icon" sizes="180x180" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_128x128.png" sizes="128x128">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_192x192.png" sizes="192x192">
 
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/animations.css">
@@ -88,7 +88,7 @@
 <main class="main_contents">
     <section class="company_info purpose news f_color_w align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
-            <h2 class="main_title">最新消息</h2>
+            <h2 class="main_title no_line">最新消息</h2>
             <p class="p20">全康科技，持續創新，掌握產業界相關技術及市場資訊，綜觀世界脈動!</p>
         </div>
     </section>
@@ -111,7 +111,7 @@
     <section class="company_info newsBox bg_gray">
         <div class="ContentsBox">
             <h2 class="new_main_title">醫療相關訊息</h2>
-            <ul>
+            <ul class="gray_line">
                 <li class="clearfix">
                     <p class="day">2018-11</p>
                     <div class="new_info">
