--- a/RH2/product.html
+++ b/RH2/product.html
@@ -8,25 +8,25 @@
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:image" content="http://www.richhealthtek.com/images/share_pic.jpg"/>
+<meta property="og:image" content="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/share_pic.jpg"/>
 <meta property="og:title" content="RichHealth 全康科技"/>
-<meta property="og:url" content="http://www.richhealthtek.com/"/>
+<meta property="og:url" content="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/index.html"/>
 <meta property="og:description" content="全康科技股份有限公司成立於2016年4月，為一充滿活力且著眼未來的公司，結合生醫、高端電子元件專家與全球行銷專才，投入高端醫療器材產品開發。"/>
 <meta property="og:type" content="website"/>
 
 <!-- Share image -->
-<link rel="image_src" href="http://www.richhealthtek.com/images/share_pic.jpg">
+<link rel="image_src" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/share_pic.jpg">
 <!--Icon image  -->
-<link rel="shortcut icon" href="http://www.richhealthtek.com/images/favicon.ico" />
-<link rel="apple-touch-icon" href="http://www.richhealthtek.com/images/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="152x152" href="http://www.richhealthtek.com/images/pple-touch-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="167x167" href="http://www.richhealthtek.com/images/apple-touch-icon-167x167.png">
-<link rel="apple-touch-icon" sizes="180x180" href="http://www.richhealthtek.com/images/apple-touch-icon-180x180.png">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_16x16.png" sizes="16x16">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_128x128.png" sizes="128x128">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_192x192.png" sizes="192x192">
+<link rel="shortcut icon" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon.ico" />
+<link rel="apple-touch-icon" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="152x152" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/pple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="167x167" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon-167x167.png">
+<link rel="apple-touch-icon" sizes="180x180" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_128x128.png" sizes="128x128">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_192x192.png" sizes="192x192">
 
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/animations.css">
@@ -88,7 +88,7 @@
 <main class="main_contents">
     <section class="company_info purpose product f_color_blue align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
-            <h2 class="main_title">產品介紹</h2>
+            <h2 class="main_title no_line">產品介紹</h2>
             <p class="p20">我們提供全方位的生理檢測系統，讓您隨時掌握自我的健康狀況。</p>
         </div>
     </section>
@@ -96,7 +96,7 @@
         <div class="ContentsBox">
             <h2 class="main_title">技術特點</h2>
             <p class="p_info"><span class="blue_line">全康科技整合多元生醫領域、高端電子元件設計、軟體設計專家、醫材法規人才及與全球行銷專才，投入高端醫療器材產品開發。以連續血糖監測技術領域為基礎，目標建立全方位生理檢測技術平台。</span><br></p>
-            <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_product_technology.jpg" alt="技術特點" width="100%"></div>
+            <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_product_technology.png" alt="技術特點" width="100%"></div>
         </div>
     </section>
     <section class="company_info service f_color_w align_flex">
