--- a/RH2/product_en.html
+++ b/RH2/product_en.html
@@ -8,26 +8,25 @@
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:image" content="http://www.richhealthtek.com/images/share_pic.jpg"/>
+<meta property="og:image" content="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/share_pic.jpg"/>
 <meta property="og:title" content="RealHealth Technology Corporation"/>
-<meta property="og:url" content="http://www.richhealthtek.com/"/>
+<meta property="og:url" content="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/index.html"/>
 <meta property="og:description" content="RichHealth was founded in April 2016 and is focusing on disposable medical electronics. In Q3, 2016, the company merged with Micro Needle Technology Co., Ltd. (TW) to co-develop painless CGMS related products."/>
 <meta property="og:type" content="website"/>
 
 <!-- Share image -->
-<link rel="image_src" href="http://www.richhealthtek.com/images/share_pic.jpg">
+<link rel="image_src" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/share_pic.jpg">
 <!--Icon image  -->
-<link rel="shortcut icon" href="http://www.richhealthtek.com/images/favicon.ico" />
-<link rel="apple-touch-icon" href="http://www.richhealthtek.com/images/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="152x152" href="http://www.richhealthtek.com/images/pple-touch-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="167x167" href="http://www.richhealthtek.com/images/apple-touch-icon-167x167.png">
-<link rel="apple-touch-icon" sizes="180x180" href="http://www.richhealthtek.com/images/apple-touch-icon-180x180.png">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_16x16.png" sizes="16x16">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_128x128.png" sizes="128x128">
-<link rel="icon" type="image/png" href="http://www.richhealthtek.com/images/favicon_192x192.png" sizes="192x192">
-
+<link rel="shortcut icon" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon.ico" />
+<link rel="apple-touch-icon" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="152x152" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/pple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="167x167" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon-167x167.png">
+<link rel="apple-touch-icon" sizes="180x180" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_128x128.png" sizes="128x128">
+<link rel="icon" type="image/png" href="http://www.richhealthtek.com/RichHealthWebsite/RichHealth/images/favicon_192x192.png" sizes="192x192">
 
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/animations.css">
@@ -89,15 +88,15 @@
 <main class="main_contents">
     <section class="company_info purpose product f_color_blue align_flex">
         <div class="ContentsBox" data-scroll-reveal="enter top and move 50px over 1s">
-            <h2 class="main_title">Continuously Innovates</h2>
-            <p class="p20">We offer a comprehensive range of physiological monitoring systems to keep you aware of your health status.</p>
+            <h2 class="main_title no_line">Continuously Innovates</h2>
+            <p class="p20">We offer a comprehensive range of physiological monitoring systems<br> to keep you aware of your health status.</p>
         </div>
     </section>
     <section class="company_info "><!-- w_triangle -->
         <div class="ContentsBox">
             <h2 class="main_title">Technology Highlights</h2>
-            <p class="p_info"><span class="blue_line">RichHealth integrates diverse fields of biomedical science, high-end electronic component design, software design, medical regulation professionals and global marketing experts and dedicates in developing high-end medical device products.   Starting from the continuous glucose measurement technology, RichHealth’s ultimate goal has been establishing a comprehensive platform technology for physiological measurements.</span><br></p>
-            <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_product_technology_en.jpg" alt="Technical characteristics" width="100%"></div>
+            <p class="p_info"><span class="blue_line">RichHealth integrates diverse fields of biomedical science, high-end electronic component design, software design, medical regulation professionals and global marketing experts and dedicates in developing high-end medical device products. Starting from the continuous glucose measurement technology, RichHealth’s ultimate goal has been establishing a comprehensive platform technology for physiological measurements.</span><br></p>
+            <div class="imgBox" data-scroll-reveal="enter top"><img src="images/pic_product_technology_en.png" alt="Technical characteristics" width="100%"></div>
         </div>
     </section>
     <section class="company_info service f_color_w align_flex">
